src/test/deca/syntax/invalid/if_test6.deca
//Description
//    Vérifier le if
//
//Résultats :
//    Erreur Syntaxique ligne 9
//


if(class A){} else({});
